# n1-brightdata

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
skills/: skill.md
src/n1_brightdata/: __init__.py  agent.py  cli.py  console.py
